--- a/index.html
+++ b/index.html
@@ -165,6 +165,24 @@
             justify-content: space-between;
         }
 
+        .panel-close-btn {
+            background: rgba(255, 255, 255, 0.1);
+            border: none;
+            color: white;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 14px;
+            line-height: 1;
+            padding: 0;
+            margin-left: 10px;
+        }
+
+        .panel-close-btn:hover {
+            background: rgba(255, 255, 255, 0.2);
+        }
+
         .grid-container {
             display: grid;
             gap: 2px;
@@ -521,6 +539,27 @@
         .export-btn.summary {
             grid-column: 1 / -1;
         }
+
+        #view-controls {
+            position: absolute;
+            top: 20px;
+            left: 390px;
+            background: rgba(0, 0, 0, 0.8);
+            padding: 15px;
+            border-radius: 10px;
+            color: white;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            max-width: 200px;
+        }
+
+        #view-controls h2 {
+            margin-bottom: 15px;
+            color: #2196F3;
+            font-size: 18px;
+            border-bottom: 2px solid #2196F3;
+            padding-bottom: 5px;
+        }
     </style>
 </head>
 <body>
@@ -613,31 +652,31 @@
             <input type="checkbox" id="animate" checked>
             <label for="animate">Animation</label>
         </div>
+    </div>
+
+    <div id="view-controls">
+        <h2>Affichage</h2>
 
         <div class="checkbox-group">
             <input type="checkbox" id="showGrid" checked>
-            <label for="showGrid">Afficher la grille</label>
+            <label for="showGrid">Grille satellites</label>
         </div>
 
         <div class="checkbox-group">
             <input type="checkbox" id="showMetricsPanel" checked>
-            <label for="showMetricsPanel">Afficher panneau métriques</label>
+            <label for="showMetricsPanel">Métriques</label>
         </div>
 
         <div class="checkbox-group">
             <input type="checkbox" id="showGroundStationsPanel" checked>
-            <label for="showGroundStationsPanel">Afficher panneau stations</label>
+            <label for="showGroundStationsPanel">Stations au sol</label>
         </div>
     </div>
 
     <div id="grid-view">
         <h3>
             <span>Grille des satellites</span>
-            <div class="drag-handle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+            <button class="panel-close-btn" onclick="document.getElementById('grid-view').style.display='none'; document.getElementById('showGrid').checked=false;">×</button>
         </h3>
         <div id="grid-container" class="grid-container"></div>
         <div class="grid-legend" id="grid-legend"></div>
@@ -659,11 +698,7 @@
     <div id="ground-stations">
         <h3>
             <span>Stations au sol</span>
-            <div class="drag-handle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+            <button class="panel-close-btn" onclick="document.getElementById('ground-stations').style.display='none'; document.getElementById('showGroundStationsPanel').checked=false;">×</button>
         </h3>
         <div class="station-input-group">
             <input type="text" id="station-name" class="station-input-full" placeholder="Nom de la station">
@@ -700,11 +735,7 @@
     <div id="metrics-panel">
         <h3>
             <span>Collecte de Métriques</span>
-            <div class="drag-handle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+            <button class="panel-close-btn" onclick="document.getElementById('metrics-panel').style.display='none'; document.getElementById('showMetricsPanel').checked=false;">×</button>
         </h3>
 
         <div class="metrics-info">
