--- a/index.html
+++ b/index.html
@@ -626,6 +626,14 @@
             </div>
         </div>
 
+        <div class="control-group">
+            <label>
+                Taille satellites
+                <span class="value-display" id="satelliteSize-value">0.30</span>
+            </label>
+            <input type="range" id="satelliteSize" min="0.05" max="0.30" value="0.30" step="0.01">
+        </div>
+
         <button id="updateBtn">Mettre à jour la constellation</button>
 
         <div style="margin-top: 10px; padding-top: 10px; border-top: 1px solid #333;">
